Fix accessibility issue on Safari VoiceOver by adding role attribute to lists

--- a/content/css/_navbar.scss
+++ b/content/css/_navbar.scss
@@ -11,8 +11,7 @@
 }
 
 .navbar ul {
-  list-style-image: none;
-  list-style-type: none;
+  list-style: none;
   margin: 0;
   padding-left: 0.5rem;
 
